--- a/extlinux.conf
+++ b/extlinux.conf
@@ -7,4 +7,4 @@ LABEL nyan-big1
         LINUX ../boot/zImage
         FDTDIR ../boot/dtbs
 	INITRD ../boot/initramfs-linux.img
-	APPEND console=tty1 rw root=PARTUUID=
+	APPEND rw root=PARTUUID=
